--- a/client/signup.html
+++ b/client/signup.html
@@ -5,7 +5,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Welcome, please sign up below</h5>
+                    <h5 class="signup-modal-title" id="exampleModalLabel">Welcome, please sign up below</h5>
                     <button type="button" class="closeSignup" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
