Homeview-styling finished. Will continue on filter next.V2

--- a/client/index.html
+++ b/client/index.html
@@ -14,32 +14,35 @@
     <link rel="stylesheet" href="profile.css">
     <link rel="stylesheet" href="loginsignup.css">
     <script async src="https://js.stripe.com/v2/"></script>
+    <link rel="stylesheet" href="homeview.css">
+    <link rel="stylesheet" href="filter.css">
+
     <title>MealMate</title>
 </head>
 <!--<body style="padding-top: 100px;">-->
 <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #006267;">
         <div class="container-fluid">
-          <a id="mealMateLink" class="navbar-brand larger-text" href="#" style="color:white;"><strong>MealMate</strong></a>
+          <a id="mealMateLink" class="navbar-brand larger-text" href="#" style="color:white; font-family: 'Brandon Grotesque Bold', sans-serif;"><strong>MealMate</strong></a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a id= "sellLink"class="nav-link" href="#" style="color:white;">Sell</a>
+                <a id= "sellLink"class="nav-link" href="#" style="color:white; font-family: 'Brandon Grotesque Bold', sans-serif;" >Sell</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"style="color:white;">About Us</a>
+                <a class="nav-link" href="#"style="color:white; font-family: 'Brandon Grotesque Bold', sans-serif;">About Us</a>
               </li>
               <li class="nav-item">
-                <a id="loginLink" class="nav-link" href="#"style="color:white;">Log in</a>
+                <a id="loginLink" class="nav-link" href="#"style="color:white; font-family: 'Brandon Grotesque Bold', sans-serif;">Log in</a>
               </li>
               <li class="nav-item">
-                <a id ="signupLink" class="nav-link" href="#"style="color:white;">Sign up</a>
+                <a id ="signupLink" class="nav-link" href="#"style="color:white; font-family: 'Brandon Grotesque Bold', sans-serif;">Sign up</a>
               </li>
               <li class="nav-item">
-                <a id ="logoutLink" class="nav-link d-none" href="#"style="color:white;">Log out</a>
+                <a id ="logoutLink" class="nav-link d-none" href="#"style="color:white; font-family: 'Brandon Grotesque Bold', sans-serif;">Log out</a>
               </li>
             </ul>
             <div class="ml-auto">
