--- a/client/login.html
+++ b/client/login.html
@@ -26,6 +26,9 @@
                         <div style="text-align: center; margin-top: 10px;">
                             <a href="#" id="redirectSignup">Don't have an account? Click here to create one</a>
                         </div>
+                    </form>
+                    <div style="text-align: center; margin-top: 10px;">
+                        <a href="#" id="redirectSignup" style="font-family: 'Brandon Grotesque Regular', sans-serif;">Don't have an account? Click here to create one</a>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
