--- a/client/signup.html
+++ b/client/signup.html
@@ -45,7 +45,7 @@
                         </div>
                     </form>
                     <div style="text-align: center; margin-top: 10px;">
-                        <a href="#" id="redirectLogin">Already have an account? Click here to login</a>
+                        <a href="#" id="redirectLogin" style="font-family: 'Brandon Grotesque Regular', sans-serif;">Already have an account? Click here to login</a>
                     </div>
                 </div>
                 <div class="modal-footer">
