--- a/client/soldProducts.html
+++ b/client/soldProducts.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="profileContainer">
-        <h1 style="text-align: center;">Purchase history</h1>
+        <h1 style="text-align: center;">Sold Products</h1>
     
     <nav class="profile-menu">
         <u>
@@ -28,10 +28,10 @@
         <thead>
             <tr>
                 <th>Product Name</th>
-                <th>Date of Purchase</th>
+                <th>Selling date</th>
                 <th>Price</th>
                 <th>Quantity</th>
-                <th>Review</th>
+                <th>Reviews</th>
             </tr>
         </thead>
         <tbody>
@@ -39,7 +39,7 @@
         </tbody>
     </table>
 
-    <!-- Review Modal -->
+    <!-- Review Modal , ska bytas ut-->
     <div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="reviewModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <!-- Den skrivna reveiwen i modal-->
+    <!-- Den skrivna reveiwen i modal, ska bytas ut-->
     <div class="modal fade" id="reviewTextModal" tabindex="-1" role="dialog" aria-labelledby="reviewTextModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
