--- a/client/accountdetails.html
+++ b/client/accountdetails.html
@@ -15,6 +15,7 @@
             <li> <a id="accountbutton" href="#">Account details</a></li>
             <li> <a id="purchaseHistoryBtn" href="#">Purchase history</a></li>
             <li> <a id="soldProductsbutton" href="#">Sold products</a></li>
+            <li> <a id="currentOffersbutton" href="#">Your current offers</a></li>
             <li> <a id="settingsbutton" href="#">Settings</a></li>
         </u>
     </nav>
