sell view update

--- a/client/sell.html
+++ b/client/sell.html
@@ -9,18 +9,22 @@
                     below:</strong></h3>
             <div class="form-group">
                 <label for="lunchboxTitle">Title:</label>
+                <p>Add a compelling title for your lunchbox</p>
                 <input type="text" class="sellinput" id="lunchboxTitle" name="lunchboxTitle" required>
             </div>
             <div class="form-group">
                 <label for="lunchboxPrice">Price per luncbox:</label>
+                <p>Price must be a integer, for more information see FaQ</p>
                 <input type="text" class="sellinput" id="lunchboxPrice" name="lunchboxPrice" required>
             </div>
             <div class="form-group">
                 <label for="lunchboxQuantity">Quantity:</label>
+                <p>Quantity must be a integer</p>
                 <input type="text" class="sellinput" id="lunchboxQuantity" name="lunchboxQuantity" required>
             </div>
             <div class="form-group">
                 <label for="lunchboxDescription">Description:</label>
+                <p>Add a compelling description for your lunchbox</p>
                 <textarea class="sellinput" id="lunchboxDescription" name="lunchboxDescription" rows="4"
                     required></textarea>
             </div>
@@ -30,12 +34,14 @@
             </div>
             <div class="form-group">
                 <label for="lunchboxAllergens">Allergens:</label>
+                <p>Its important that you check all allergens in your lunchbox!</p>
                     <div id="allergensList" class="allergens-list">
                     <!-- Checkboxes for each allergen -->
                     </div>
             </div>
             <div class="form-group">
               <label for="lunchboxProteins">Proteins:</label>
+              <p>Its important that you check all proteins in your lunchbox!</p>
                   <div id="proteinList" class="proteins-list">
                   <!-- Checkboxes for each protein -->
                   </div>
