current purchases finished but waiting on backend

--- a/client/currentOffers.html
+++ b/client/currentOffers.html
@@ -28,7 +28,7 @@
         <thead>
             <tr>
                 <th>Product Name</th>
-                <th>Upload date</th>
+                <th>Cook date</th>
                 <th>Price</th>
                 <th>Quantity</th>
                 <th>Edit</th>
