--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
               </li>
             </ul>
             <div class="ml-auto">
-              <a class="navbar-profile d-none" href="#" id="profile">
+              <a class="navbar-profile" href="#" id="profile">
                   <img src="Images/Profilesymbol.png" style="width: 35px; height: 35px; margin-right: 15px; margin-top: 10px;">
               </a>
               <a class="navbar-basket" href="#" id="basket">
