--- a/client/accountdetails.html
+++ b/client/accountdetails.html
@@ -14,15 +14,17 @@
         <u>
             <li> <a id="accountbutton" href="#">Account details</a></li>
             <li> <a id="purchaseHistoryBtn" href="#">Purchase history</a></li>
-            <li> <a id="soldProductsbutton" href="#">Sold products</a></li>
+            <li> <a id="soldProductsbutton" href="#">Sell history</a></li>
             <li> <a id="currentOffersbutton" href="#">Your current offers</a></li>
             <li> <a id="settingsbutton" href="#">Settings</a></li>
         </u>
     </nav>
 
-    <nav class="profile-navbar">
-        <li><th>Email:</th></li>
-        <li> <a id="accountEmail"></a></li>
+    <nav id="emailInfo" class="profile-navbar">
+        <u>
+            <li><th>Email:</th></li>
+            <li> <a id="accountEmail"></a></li>
+        </u>
     </nav>    
     
     <nav class="profile-navbar">
