--- a/client/purchasehistory.html
+++ b/client/purchasehistory.html
@@ -14,7 +14,7 @@
         <u>
             <li> <a id="accountbutton" href="#">Account details</a></li>
             <li> <a id="purchaseHistoryBtn" href="#">Purchase history</a></li>
-            <li> <a id="soldProductsbutton" href="#">Sold products</a></li>
+            <li> <a id="soldProductsbutton" href="#">Sell history</a></li>
             <li> <a id="currentOffersbutton" href="#">Your current offers</a></li>
             <li> <a id="settingsbutton" href="#">Settings</a></li>
         </u>
