Nu laddar användarinfo in på accountdetails

--- a/client/soldProducts.html
+++ b/client/soldProducts.html
@@ -8,13 +8,13 @@
 <body>
 
     <div class="profileContainer">
-        <h1 style="text-align: center;">Sold Products</h1>
+        <h1 style="text-align: center;">Sell history</h1>
     
     <nav class="profile-menu">
         <u>
             <li> <a id="accountbutton" href="#">Account details</a></li>
             <li> <a id="purchaseHistoryBtn" href="#">Purchase history</a></li>
-            <li> <a id="soldProductsbutton" href="#">Sold products</a></li>
+            <li> <a id="soldProductsbutton" href="#">Sell history</a></li>
             <li> <a id="currentOffersbutton" href="#">Your current offers</a></li>
             <li> <a id="settingsbutton" href="#">Settings</a></li>
         </u>
@@ -31,7 +31,7 @@
                 <th>Selling date</th>
                 <th>Price</th>
                 <th>Quantity</th>
-                <th>Reviews</th>
+                <th>Review</th>
             </tr>
         </thead>
         <tbody>
