Revert "Merge branch 'feature/Single-protein-fix' into 'main'"
This reverts merge request !140

--- a/client/filter.html
+++ b/client/filter.html
@@ -41,7 +41,7 @@
             <div class="select-meat-box", id="select-meat-box" style="color: white; font-size: 14px;"> ⊗Meat  </div>
             <div class="select-fish-box", id="select-fish-box" style="color: white; font-size: 14px;"> ⊗Fish  </div>
             <div class="select-shellfish-box", id="select-shellfish-box" style="color: white; font-size: 14px;"> ⊗Shellfish </div>
-          <!--  <div class="select-dairy-box", id="select-dairy-box" style="color: white; font-size: 14px;"> ⊗Dairy & eggs </div> -->
+            <div class="select-dairy-box", id="select-dairy-box" style="color: white; font-size: 14px;"> ⊗Dairy & eggs </div>
             <div class="select-plantbased-box", id="select-plantbased-box" style="color: white; font-size: 14px;"> ⊗Plantbased  </div>
           </div>
 
