Changed conflicting id:s and removed an unnecessary modal

--- a/client/filter.html
+++ b/client/filter.html
@@ -14,12 +14,12 @@
 <body>
     <div id="CicularFilterContainer" class="cicularfilter-container">
          <div class="circle-background"></div>
-         <img src="images/funnel-32.png" id="expandSymbol"> 
+         <img src="images/funnel-32.png"> 
     </div>
 
     <div id="PillFilterContainer" class="pillfilter-container">
         <div class="pill-background"></div>
-        <img src="images/funnel-32.png" id="expandSymbol"> 
+        <img src="images/funnel-32.png"> 
    </div>
    
     <div id="RectangularFilterContainer" class="rectangularfilter-container">
