--- a/client/login.html
+++ b/client/login.html
@@ -15,11 +15,11 @@
                         <form id="logInform">
                             <div class="loginform-group">
                                 <label for="email">Email:</label>
-                                <input type="text" class="form-control" id="email" name="email">
+                                <input type="text" class="form-control" id="loginEmail" name="email">
                             </div>
                             <div class="passwordform-group">
                                 <label for="password">Password:</label>
-                                <input type="password" class="form-control" id="password" name="password">
+                                <input type="password" class="form-control" id="loginPassword" name="password">
                                 <small id="passwordError" class="text-danger"></small>
                             </div>
                         </form>
