--- a/client/signup.html
+++ b/client/signup.html
@@ -14,7 +14,7 @@
                     <form id="Signupform">
                         <div class="signupform-group">
                             <label for="email">Email:</label>
-                            <input type="text" class="form-control" id="email" name="email" required>
+                            <input type="text" class="form-control" id="signupEmail" name="email" required>
                             <p id="emailError" style="color: red; display: none;">Email must contain '@'</p>
                         </div>
                         <div class="signupform-group">
@@ -23,7 +23,7 @@
                         </div>
                         <div class="signupform-group">
                             <label for="password">Password:</label>
-                            <input type="password" class="form-control" id="password" name="password" required>
+                            <input type="password" class="form-control" id="signupPassword" name="password" required>
                         </div>
                         <div class="signupform-group">
                             <label for="pnum">Phone Number:</label>
