--- a/client/soldProducts.html
+++ b/client/soldProducts.html
@@ -40,47 +40,25 @@
     </table>
 
     <!-- Review Modal , ska bytas ut-->
-    <div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="reviewModalLabel" aria-hidden="true">
+    <div class="modal fade" id="soldReviewModal" tabindex="-1" role="dialog" aria-labelledby="reviewModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="reviewModalLabel">Give Review</h5>
+                    <h5 class="modal-title" id="soldReviewModalLabel">Give Review</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <textarea id="reviewText" class="form-control" rows="3" placeholder="Write your review here..."></textarea>
+                    <textarea id="soldReviewText" class="form-control" rows="3" placeholder="Write your review here..."></textarea>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="submitReview">Submit Review</button>
+                    <button type="button" class="btn btn-primary" id="soldSubmitReview">Submit Review</button>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- Den skrivna reveiwen i modal, ska bytas ut-->
-    <div class="modal fade" id="reviewTextModal" tabindex="-1" role="dialog" aria-labelledby="reviewTextModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="reviewTextModalLabel">Review Text</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body" id="reviewTextContent">
-                    <!-- Här kommer reviewtexten vara -->
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</body>
 
 
 </html>
