--- a/client/settings.html
+++ b/client/settings.html
@@ -12,8 +12,7 @@
 <body>
 
     <div class="profileContainer">
-        <h1 style="text-align: center;">Settings</h1>
-    
+      <h1 class="profileH1" style="text-align: left;">Your account</h1>    
     <nav class="profile-menu">
         <u>
             <li> <a id="accountbutton" href="#">Account details</a></li>
@@ -23,6 +22,8 @@
             <li> <a id="settingsbutton" href="#">Settings</a></li>
         </u>
     </nav>
+
+    <h2 class="profileH2">Settings</h2>
 
     <form id="settingsForm">
       <div class="form-group">
