Tagit bort kommentarer, liten designfix på current offers

--- a/client/contact.html
+++ b/client/contact.html
@@ -11,7 +11,7 @@
 
     faqQuestions.forEach((question, index) => {
       question.addEventListener("click", () => {
-        faqAnswers[index].classList.toggle("show-answer"); // Toggles 'show-answer' class
+        faqAnswers[index].classList.toggle("show-answer"); // Togglar show-answer-klassen
       });
     });
   </script>
@@ -31,15 +31,11 @@
           the living standards of the student by making their daily life more efficient.</p>
       </div>
     </div>
-    <!-- FAQ Container -->
     <div class="faqContainer">
-      <!-- FAQ Header -->
       <div class="faqHeader">
         <h2>FAQ</h2>
       </div>
-      <!-- FAQ Content -->
       <div class="faqContent">
-        <!-- FAQ Question and Answer -->
         <div class="faqQuestion">
           <h3 onclick="toggleAnswer(this)">How does pricing work?
             <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"
@@ -113,7 +109,7 @@
       <div class="ContactInfoContainer">
         <h2 class="StillHaveQuestionsTitle">STILL HAVE QUESTIONS OR FEEDBACK?</h2>
 
-        <!-- Contact info -->
+        <!-- Kontaktinformation -->
         <table id="contact-info">
           <tr>
             <th colspan="2">
@@ -134,7 +130,7 @@
           </tr>
         </table>
       </div>
-      <!-- Contact form -->
+      <!-- Kontakformuläret -->
       <div class="ContactFormContainer">
       <form id="contactForm">
         <div class="form-group">
