--- a/client/filter.html
+++ b/client/filter.html
@@ -48,7 +48,7 @@
             <div id="protein-dropdown" class="protein-dropdown-content">
               <div class="protein-scrollable-content">
                 <form id="proteinForm">
-               <!-- This is filled dynamic -->
+               <!-- Fylls på dynamiskt -->
               </form>
             </div>
             <span class="protein-close-btn", id="protein-closeX">X</span>
@@ -61,7 +61,7 @@
                 <div id="dropdown" class="dropdown-content">
                   <div class="scrollable-content">
                     <form id="optionsForm">
-                   <!-- This is filled dynamic -->
+                   <!-- Fylls på dynamiskt -->
                   </form>
                 </div>
                 <span class="allergy-close-btn", id="allergy-closeX">X</span>
