--- a/client/currentOffers.html
+++ b/client/currentOffers.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="profileContainer">
-        <h1 style="text-align: center;">Your current offers</h1>
+        <h1 class="profileH1" style="text-align: left;">Your account</h1>
     
     <nav class="profile-menu">
         <u>
@@ -20,6 +20,8 @@
         </u>
     </nav>
     
+    <h2 class="profileH2">Your current offers</h2>
+
     <table class="purchaseTable" id="purchaseTable">
         <thead>
             <tr>
