--- a/client/currentOffers.html
+++ b/client/currentOffers.html
@@ -27,7 +27,7 @@
             <tr>
                 <th>Product Name</th>
                 <th>Cook date</th>
-                <th>Price</th>
+                <th>Total Price</th>
                 <th>Quantity</th>
                 <th>Remove</th>
             </tr>
