--- a/client/success.html
+++ b/client/success.html
@@ -6,7 +6,7 @@
 <body>
   <section>
     <p>
-      We appreciate your business! If you have any questions, please email
+      Your purchase went through! If you have any questions, please email
       <a href="mailto:mealmate@gmail.com">mealmate@gmail.com</a>.
       <a href="/" class="btn btn-primary mt-3" id="backToHomeBtn">Back to Home</a>
     </p>
