--- a/client/accountdetails.html
+++ b/client/accountdetails.html
@@ -47,7 +47,7 @@
     </nav>
 
     <nav class="profile-navbar">
-        <li class="boldText"><th>Verified User: </th></li>
+        <li class="boldText"><th>Verified user: </th></li>
         <li> <a id="accountVerification"></a></li>
     </nav>
 
