--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,9 @@
               <li class="nav-item">
                 <a id ="logoutLink" class="nav-link d-none" href="#"style="color:white; font-family: 'Brandon Grotesque Bold', sans-serif;">Log out</a>
               </li>
+              <li class="nav-item">
+                <a id ="adminLink" class="nav-link d-none" href="#"style="color:white; font-family: 'Brandon Grotesque Bold', sans-serif;">Admin</a>
+              </li>
             </ul>
             <div class="ml-auto">
               <a class="navbar-profile d-none" href="#" id="profile">
@@ -79,6 +82,7 @@
   <script async src="contact.js"></script>
   <script async src="checkout.js"></script>
   <script async src="profile.js"></script>
+  <script async src="admin.js"></script>
 
   
   
