finished admin view

--- a/client/index.html
+++ b/client/index.html
@@ -82,7 +82,7 @@
   <script async src="contact.js"></script>
   <script async src="checkout.js"></script>
   <script async src="profile.js"></script>
-  <script async src="admin.js"></script>
+  <script src="admin.js"></script>
 
   
   
