--- a/client/index.html
+++ b/client/index.html
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="shoppingcart.css">
     <link rel="stylesheet" href="profile.css">
     <link rel="stylesheet" href="loginsignup.css">
-    <script async src="https://js.stripe.com/v2/"></script>
     <link rel="stylesheet" href="homeview.css">
     <link rel="stylesheet" href="filter.css">
     
+    <!--Stripe-->
+    <script async src="https://js.stripe.com/v2/"></script>
 
     <title>MealMate</title>
 </head>
-<!--<body style="padding-top: 100px;">-->
 <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #006267;">
         <div class="container-fluid">
@@ -82,7 +82,7 @@
   <script async src="contact.js"></script>
   <script async src="checkout.js"></script>
   <script async src="profile.js"></script>
-  <script src="admin.js"></script>
+  <script async src="admin.js"></script>
 
   
   
