Fixade två issues vi har fått. Man får nu bekräftelse vid sign up och om man försöker använda en redan existerande email så visas det ett rött error meddelande under email-fältet.

--- a/client/signup.html
+++ b/client/signup.html
@@ -16,6 +16,7 @@
                             <label for="email">Email:</label>
                             <input type="text" class="form-control" id="signupEmail" name="email" required>
                             <p id="emailError" style="color: red; display: none;">Email must contain '@'</p>
+                            <small id="alreadyExistingEmailError" class="text-danger"></small>
                         </div>
                         <div class="signupform-group">
                             <label for="name">Full Name:</label>
